@@ -22,7 +22,7 @@ p4a_png_fix = function ()
 {
 	$.ifixpng(p4a_theme_path + '/jquery/pixel.gif');
 	$('.p4a_db_navigator li').ifixpng();
-	$("img[@src$=.png]").each(function () {
+	$("img[src$=.png]").each(function () {
 		var parents = jQuery.makeArray($(this).parents());
 		var found = false;
 		for (var i=0; i<parents.length; i++) {
