@@ -2,6 +2,7 @@
 - Zend Framework was updated to 1.7.8
 - jQuery was updated to 1.3.2
 - jQuery UI was updated to 1.7.1
+- P4A_Tab_Pane was converted to jQuery UI
 
 3.2.2
 - P4A_Table's image cols are now centered horizontally
